# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/distributedhardware/distributed_input/distributedinput.gni")

ohos_shared_library("libdinput_source_trans") {
  include_dirs = [
    "include",
    "${common_path}/include",
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "${fwk_common_path}/log/include",
    "${fwk_common_path}/utils/include",
    "${fwk_utils_path}/include/log",
    "${fwk_utils_path}/include",
    "//third_party/json/include",
    "//foundation/communication/dsoftbus/interfaces/kits/transport",
    "${service_common}/include",
    "//foundation/distributedhardware/device_manager/interfaces/inner_kits/native_cpp/include",
    "${services_source_path}/inputinject/include",
    "//base/hiviewdfx/hitrace/interfaces/native/innerkits/include/hitrace_meter",
    "${dfx_utils_path}/include",
    "${utils_path}/include",
    "${low_latency_path}/include",
    "${frameworks_path}/include",
    "${distributedinput_path}/inputdevicehandler/include",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
    "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy/include",
    "//foundation/distributedhardware/distributed_input/services/transportbase/include",
  ]

  sources = [ "src/distributed_input_source_transport.cpp" ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedinpusourcetransport\"",
    "LOG_DOMAIN=0xD004100",
  ]

  if (distributed_input_low_latency) {
    defines += [ "DINPUT_LOW_LATENCY" ]
  }

  deps = [
    "${dfx_utils_path}:libdinput_dfx_utils",
    "${fwk_utils_path}:distributedhardwareutils",
    "${low_latency_path}:libdinput_low_latency",
    "${utils_path}:libdinput_utils",
    "//base/notification/eventhandler/frameworks/eventhandler:libeventhandler",
    "//foundation/communication/dsoftbus/sdk:softbus_client",
    "//foundation/distributedhardware/distributed_input/services/source/inputinject:libdinput_inject",
    "//foundation/distributedhardware/distributed_input/services/transportbase:libdinput_trans_base",
  ]

  external_deps = [
    "c_utils:utils",
    "hitrace_native:hitrace_meter",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_input"
}
