# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/distributedhardware/distributedinput/distributedinput.gni")
module_out_path = "distributedinput_stander/source_handler"

group("unittest") {
  testonly = true

  deps = [ ":distributed_input_source_handler_test" ]
}

## UnitTest distributed_input_manager_service_test {{{
ohos_unittest("distributed_input_source_handler_test") {
  module_out_path = module_out_path

  include_dirs = [
    "${distributedinput_path}/sourcehandler/include",
    "${innerkits_path}/include",
    "${innerkits_path}/src",
    "${ipc_path}/include",
    "${ipc_path}/src",
    "${services_source_path}/sourcemanager/include",
    "${frameworks_path}/include",
    "${service_common}/include",
    "${common_path}/include",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "${fwk_common_path}/log/include",
    "${fwk_common_path}/utils/include",
    "${fwk_utils_path}/include/log",
    "${fwk_utils_path}/include",
    "//third_party/json/include",
  ]

  sources = [
    "//foundation/distributedhardware/distributedinput/sourcehandler/src/distributed_input_source_handler.cpp",
    "distributed_input_sourcehandler_test.cpp",
    "//foundation/distributedhardware/distributedinput/sourcehandler/test/unittest/mock/mock_distributed_input_client.cpp",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedinpututtest\"",
    "LOG_DOMAIN=0xD004100",
  ]

  deps = [
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//utils/native/base:utils",
    "${fwk_utils_path}:distributedhardwareutils",
    "${innerkits_path}:libdinput_sdk",
    "${services_source_path}/sourcemanager:libdinput_source",
  ]

  external_deps = [
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "hiviewdfx_hilog_native:libhilog",
    "samgr_standard:samgr_proxy",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]
}

## UnitTest distributed_input_manager_service_test }}}
