# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_input/distributedinput.gni")

##############################fuzztest##########################################
ohos_fuzztest("DistributedInputSourceTransportFuzzTest") {
  module_out_path = "distributed_input/system"

  fuzz_config_file = "//foundation/distributedhardware/distributed_input/test/fuzztest/distributedinputsourcetransport_fuzzer"

  include_dirs = [
    "//foundation/distributedhardware/distributed_input/services/source/transport/include",
    "//foundation/distributedhardware/distributed_input/services/transportbase/include",
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "${common_path}/include",
    "//commonlibrary/c_utils/base/include",
    "${fwk_common_path}/log/include",
    "${fwk_common_path}/utils/include",
    "${fwk_interfaces_path}/include",
    "${fwk_utils_path}/include/log",
    "${fwk_utils_path}/include",
    "${service_common}/include",
    "${services_source_path}/inputinject/include",
    "${services_source_path}/transport/include",
    "//third_party/json/include",
    "//third_party/libevdev/libevdev/",
    "${dfx_utils_path}/include",
    "${utils_path}/include",
    "//base/hiviewdfx/hitrace/interfaces/native/innerkits/include/hitrace_meter",
    "${frameworks_path}/include",
    "${distributedinput_path}/inputdevicehandler/include",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
    "//foundation/systemabilitymgr/safwk/interfaces/innerkits/safwk",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [
    "//foundation/distributedhardware/distributed_input/services/source/transport/src/distributed_input_source_transport.cpp",
    "distributed_input_source_transport_fuzzer.cpp",
  ]

  deps = [
    "${dfx_utils_path}:libdinput_dfx_utils",
    "${fwk_interfaces_path}:libdhfwk_sdk",
    "${fwk_utils_path}:distributedhardwareutils",
    "${utils_path}:libdinput_utils",
    "//base/notification/eventhandler/frameworks/eventhandler:libeventhandler",
    "//foundation/distributedhardware/distributed_input/services/source/inputinject:libdinput_inject",
    "//third_party/libevdev:libevdev",
    "//foundation/distributedhardware/distributed_input/services/transportbase:libdinput_trans_base",
  ]

  external_deps = [
    "c_utils:utils",
    "dsoftbus:softbus_client",
    "hitrace_native:hitrace_meter",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"DistributedInputSourceTransportFuzzTest\"",
    "LOG_DOMAIN=0xD004100",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true

  deps = [ ":DistributedInputSourceTransportFuzzTest" ]
}
###############################################################################
