# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_input/distributedinput.gni")
module_out_path = "distributed_input/trans_base"

group("transbaseunittest") {
  testonly = true

  deps = [ ":distributed_input_transbase_test" ]
}

## UnitTest distributed_input_manager_service_test {{{
ohos_unittest("distributed_input_transbase_test") {
  module_out_path = module_out_path

  include_dirs = [
    "//foundation/distributedhardware/distributed_input/services/source/transport/include",
    "//foundation/distributedhardware/distributed_input/services/sink/transport/include",
    "//foundation/distributedhardware/distributed_input/services/transportbase/include",
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "${common_path}/include",
    "${fwk_interfaces_path}/include",
    "${fwk_common_path}/log/include",
    "${fwk_common_path}/utils/include",
    "${fwk_utils_path}/include/log",
    "${fwk_utils_path}/include",
    "${service_common}/include",
    "${services_source_path}/inputinject/include",
    "${dfx_utils_path}/include",
    "${utils_path}/include",
    "${frameworks_path}/include",
    "//third_party/json/include",
    "//third_party/libevdev/libevdev/",
    "${distributedinput_path}/inputdevicehandler/include",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
    "//foundation/communication/dsoftbus/interfaces/kits/transport",
    "//base/hiviewdfx/hitrace/interfaces/native/innerkits/include/hitrace_meter",
    "//base/notification/eventhandler/interfaces/inner_api",
    "${common_path}/test/mock",
  ]

  sources = [
    "//foundation/distributedhardware/distributed_input/services/source/transport/src/distributed_input_source_transport.cpp",
    "//foundation/distributedhardware/distributed_input/services/sink/transport/src/distributed_input_sink_transport.cpp",
    "//foundation/distributedhardware/distributed_input/services/sink/transport/src/distributed_input_sink_switch.cpp",
    "distributed_input_transbase_test.cpp",
    "${common_path}/test/mock/session_mock.cpp",
    "${common_path}/test/mock/softbus_bus_center_mock.cpp",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedinpututtest\"",
    "LOG_DOMAIN=0xD004100",
  ]

  deps = [
    "${dfx_utils_path}:libdinput_dfx_utils",
    "${fwk_interfaces_path}:libdhfwk_sdk",
    "${fwk_utils_path}:distributedhardwareutils",
    "${utils_path}:libdinput_utils",
    "//third_party/libevdev:libevdev",
    "//base/notification/eventhandler/frameworks/eventhandler:libeventhandler",
    "//foundation/distributedhardware/distributed_input/services/source/inputinject:libdinput_inject",
    "//foundation/distributedhardware/distributed_input/services/transportbase:libdinput_trans_base",
  ]

  external_deps = [
    "c_utils:utils",
    "hitrace_native:hitrace_meter",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]
}
## UnitTest distributed_input_manager_service_test }}}
