# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/distributedhardware/distributed_input/distributedinput.gni")
module_out_path = "distributed_input/sink_manager"

group("sinkmanagerunittest") {
  testonly = true

  deps = [ ":distributed_input_sinkmanager_test" ]
}

## UnitTest distributed_input_manager_service_test {{{
ohos_unittest("distributed_input_sinkmanager_test") {
  module_out_path = module_out_path

  include_dirs = [
    "${innerkits_path}/include",
    "${innerkits_path}/src",
    "${ipc_path}/include",
    "${ipc_path}/src",
    "//foundation/distributedhardware/distributed_input/services/sink/transport/include",
    "//foundation/distributedhardware/distributed_input/services/sink/sinkmanager/include",
    "//foundation/distributedhardware/distributed_input/frameworks/include",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "${common_path}/include",
    "${fwk_common_path}/log/include",
    "${fwk_common_path}/utils/include",
    "${fwk_utils_path}/include/log",
    "${fwk_utils_path}/include",
    "${service_common}/include",
    "//third_party/json/include",
    "//foundation/communication/dsoftbus/interfaces/kits/transport",
    "${services_sink_path}/inputcollector/include",
    "${dfx_utils_path}/include",
    "${utils_path}/include",
    "${low_latency_path}/include",
  ]

  sources = [
    "${common_path}/include/white_list_util.cpp",
    "${common_path}/include/input_hub.cpp",
    "${common_path}/include/dinput_sa_process_state.cpp",
    "//foundation/distributedhardware/distributed_input/services/sink/sinkmanager/src/distributed_input_sink_manager.cpp",
    "//foundation/distributedhardware/distributed_input/services/sink/transport/src/distributed_input_sink_switch.cpp",
    "//foundation/distributedhardware/distributed_input/services/sink/transport/src/distributed_input_sink_transport.cpp",
    "distributed_input_sinkmanager_test.cpp",
    "//foundation/distributedhardware/distributed_input/services/sink/sinkmanager/src/distributed_input_sink_event_handler.cpp",
    "${ipc_path}/src/distributed_input_sink_stub.cpp",
    "${ipc_path}/src/start_d_input_server_call_back_proxy.cpp",
    "${ipc_path}/src/start_d_input_server_call_back_stub.cpp",
    "${services_sink_path}/inputcollector/src/distributed_input_collector.cpp",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedinpututtest\"",
    "LOG_DOMAIN=0xD004100",
  ]

  if (distributed_input_low_latency) {
    defines += [
      "DINPUT_LOW_LATENCY",
    ]
  }

  deps = [
    "//base/notification/eventhandler/frameworks/eventhandler:libeventhandler",
    "//utils/native/base:utils",
    "${fwk_utils_path}:distributedhardwareutils",
    "//foundation/communication/dsoftbus/sdk:softbus_client",
    "//third_party/openssl:libcrypto_static",
    "${dfx_utils_path}:libdinput_dfx_utils",
    "${utils_path}:libdinput_utils",
    "${low_latency_path}:libdinput_low_latency",
  ]

  external_deps = [
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "hiviewdfx_hilog_native:libhilog",
    "samgr:samgr_proxy",
    "hisysevent_native:libhisysevent",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]
}

## UnitTest distributed_input_manager_service_test }}}
