# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_input/distributedinput.gni")
module_out_path = "distributed_input/sink_trans"

group("sinktransunittest") {
  testonly = true

  deps = [ ":distributed_input_sinktrans_test" ]
}

## UnitTest distributed_input_manager_service_test {{{
ohos_unittest("distributed_input_sinktrans_test") {
  module_out_path = module_out_path

  include_dirs = [
    "//foundation/distributedhardware/distributed_input/services/sink/transport/include",
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "${common_path}/include",
    "${fwk_common_path}/log/include",
    "${fwk_common_path}/utils/include",
    "${frameworks_path}/include",
    "${fwk_interfaces_path}/include",
    "${fwk_utils_path}/include/log",
    "${fwk_utils_path}/include",
    "${service_common}/include",
    "//third_party/json/include",
    "//third_party/libevdev/libevdev/",
    "${dfx_utils_path}/include",
    "${utils_path}/include",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
    "${common_path}/test/mock",
    "//foundation/distributedhardware/distributed_input/services/sink/sinkmanager/include",
    "${fwk_interfaces_path}/include/ipc",
    "//foundation/window/window_manager/interfaces/innerkits/dm",
    "//foundation/window/window_manager/utils/include/",
    "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy/include",
    "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent/include",
    "//foundation/graphic/graphic_2d/rosen/modules/render_service_base/include",
    "//foundation/graphic/graphic_2d/interfaces/inner_api/surface",
    "//foundation/graphic/graphic_2d/interfaces/inner_api/common",
    "//drivers/peripheral/display/interfaces/include",
    "//drivers/peripheral/base",
    "//foundation/graphic/graphic_2d/utils/buffer_handle/export",
    "${innerkits_path}/include",
    "${innerkits_path}/src",
    "${ipc_path}/include",
    "${ipc_path}/src",
    "${services_sink_path}/inputcollector/include",
  ]

  sources = [
    "//foundation/distributedhardware/distributed_input/services/sink/transport/src/distributed_input_sink_switch.cpp",
    "//foundation/distributedhardware/distributed_input/services/sink/transport/src/distributed_input_sink_transport.cpp",
    "distributed_input_sinktrans_test.cpp",
    "${common_path}/test/mock/session_mock.cpp",
    "${common_path}/test/mock/softbus_bus_center_mock.cpp",
    "//foundation/distributedhardware/distributed_input/services/sink/sinkmanager/src/distributed_input_sink_manager.cpp",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedinpututtest\"",
    "LOG_DOMAIN=0xD004100",
  ]

  deps = [
    "${dfx_utils_path}:libdinput_dfx_utils",
    "${fwk_interfaces_path}:libdhfwk_sdk",
    "${fwk_utils_path}:distributedhardwareutils",
    "${utils_path}:libdinput_utils",
    "//base/notification/eventhandler/frameworks/eventhandler:libeventhandler",
    "${services_sink_path}/sinkmanager:libdinput_sink",
    "${services_sink_path}/inputcollector:libdinput_collector",
    "//foundation/window/window_manager/dm:libdm",
    "//third_party/libevdev:libevdev",
  ]

  external_deps = [
    "c_utils:utils",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]
}
## UnitTest distributed_input_manager_service_test }}}
