# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_input/distributedinput.gni")
module_out_path = "distributed_input/source_inject"

group("sourceinjectunittest") {
  testonly = true

  deps = [ ":distributed_input_inner_sourceinject_test" ]
}

## UnitTest distributed_input_manager_service_test {{{
ohos_unittest("distributed_input_inner_sourceinject_test") {
  module_out_path = module_out_path

  include_dirs = [
    "${innerkits_path}/include",
    "${innerkits_path}/src",
    "${ipc_path}/include",
    "${ipc_path}/src",
    "//foundation/distributedhardware/distributed_input/services/source/inputinject/include",
    "//foundation/distributedhardware/distributed_input/frameworks/include",
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "${common_path}/include",
    "${frameworks_path}/include",
    "${fwk_common_path}/log/include",
    "${fwk_common_path}/utils/include",
    "${fwk_utils_path}/include/log",
    "${fwk_utils_path}/include",
    "${service_common}/include",
    "//third_party/json/include",
    "//foundation/communication/dsoftbus/interfaces/kits/transport",
    "${dfx_utils_path}/include",
    "${utils_path}/include",
    "${fwk_interfaces_path}/include",
    "${fwk_interfaces_path}/include/ipc",
    "${distributedinput_path}/inputdevicehandler/include",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
    "//base/notification/eventhandler/interfaces/inner_api",
    "//foundation/systemabilitymgr/safwk/interfaces/innerkits/safwk",
    "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy/include",
    "${common_path}/test/mock",
  ]

  sources = [
    "${common_path}/include/input_hub.cpp",
    "//foundation/distributedhardware/distributed_input/inputdevicehandler/src/distributed_input_handler.cpp",
    "//foundation/distributedhardware/distributed_input/services/source/inputinject/src/distributed_input_inject.cpp",
    "//foundation/distributedhardware/distributed_input/services/source/inputinject/src/distributed_input_node_manager.cpp",
    "//foundation/distributedhardware/distributed_input/services/source/inputinject/src/virtual_device.cpp",
    "distributed_input_sourceinject_test.cpp",
    "${common_path}/test/mock/softbus_bus_center_mock.cpp",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedinpututtest\"",
    "LOG_DOMAIN=0xD004100",
  ]

  deps = [
    "${dfx_utils_path}:libdinput_dfx_utils",
    "${fwk_utils_path}:distributedhardwareutils",
    "${utils_path}:libdinput_utils",
    "//third_party/openssl:libcrypto_static",
    "${distributedinput_path}/interfaces/inner_kits:libdinput_sdk",
  ]

  external_deps = [
    "c_utils:utils",
    "ipc:ipc_core",
    "dsoftbus:softbus_client",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]
}
## UnitTest distributed_input_manager_service_test }}}
